Fixed icon alignment

--- a/src/css/static.css
+++ b/src/css/static.css
@@ -37,7 +37,7 @@
 	--size-offset-10: 8px;
 	
 	--default-line-height: 0.9;
-	--icon-line: 0.1em;
+	--icon-line: 0.2em;
 
 	--standard-border: 1px;
 	--max-border: 2px;
